Closed Bug 1890070 Opened 6 months ago Closed 6 months ago

Perma wmfme [tier 2] SUMMARY: AddressSanitizer: stack-use-after-scope /builds/worker/checkouts/gecko/xpcom/string/nsTStringRepr.cpp:83 in mozilla::detail::nsTStringRepr<char16_t>::EqualsASCII | single tracking bug

Categories

(Core :: Audio/Video: Playback, defect, P5)

defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox124 --- unaffected
firefox125 --- unaffected
firefox126 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: alwu)

References

(Regression)

Details

(Keywords: intermittent-failure, intermittent-testcase, regression)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=453688964&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/DsmBlQ8TS0Oh_42ywA3Qww/runs/0/artifacts/public/logs/live_backing.log


TEST-START | dom/media/test/test_eme_mfcdm_generate_request.html
[task 2024-04-05T21:29:53.284Z] 21:29:53     INFO - GECKO(7176) | =================================================================
[task 2024-04-05T21:29:53.285Z] 21:29:53    ERROR - GECKO(7176) | ==8356==ERROR: AddressSanitizer: stack-use-after-scope on address 0x00daa67fc6b8 at pc 0x7ffddfc8453e bp 0x00daa67fc320 sp 0x00daa67fc368
[task 2024-04-05T21:29:53.286Z] 21:29:53     INFO - GECKO(7176) | READ of size 4 at 0x00daa67fc6b8 thread T0
[task 2024-04-05T21:29:53.628Z] 21:29:53     INFO - GECKO(7176) | ==8356==WARNING: Failed to use and restart external symbolizer!
[task 2024-04-05T21:29:54.772Z] 21:29:54     INFO - GECKO(7176) |     #0 0x7ffddfc8453d in mozilla::detail::nsTStringRepr<char16_t>::EqualsASCII /builds/worker/checkouts/gecko/xpcom/string/nsTStringRepr.cpp:83
[task 2024-04-05T21:29:54.773Z] 21:29:54     INFO - GECKO(7176) |     #1 0x7ffde73294c4 in mozilla::KeySystemConfig::CreateKeySystemConfigs /builds/worker/checkouts/gecko/dom/media/eme/KeySystemConfig.cpp:241
[task 2024-04-05T21:29:54.773Z] 21:29:54     INFO - GECKO(7176) |     #2 0x7ffde7346795 in mozilla::dom::GetSupportedKeySystemConfigs /builds/worker/checkouts/gecko/dom/media/eme/MediaKeySystemAccess.cpp:285
[task 2024-04-05T21:29:54.775Z] 21:29:54     INFO - GECKO(7176) |     #3 0x7ffde73471af in mozilla::dom::MediaKeySystemAccess::GetSupportedConfig /builds/worker/checkouts/gecko/dom/media/eme/MediaKeySystemAccess.cpp:1079
[task 2024-04-05T21:29:54.776Z] 21:29:54     INFO - GECKO(7176) |     #4 0x7ffde734f96b in mozilla::dom::MediaKeySystemAccessManager::RequestMediaKeySystemAccess /builds/worker/checkouts/gecko/dom/media/eme/MediaKeySystemAccessManager.cpp:499
[task 2024-04-05T21:29:54.776Z] 21:29:54     INFO - GECKO(7176) |     #5 0x7ffde734daa4 in mozilla::dom::MediaKeySystemAccessManager::OnDoesWindowSupportProtectedMedia /builds/worker/checkouts/gecko/dom/media/eme/MediaKeySystemAccessManager.cpp:209
[task 2024-04-05T21:29:54.777Z] 21:29:54     INFO - GECKO(7176) |     #6 0x7ffde7382f89 in mozilla::MozPromise<bool,mozilla::ipc::ResponseRejectReason,1>::ThenValue<`lambda at /builds/worker/checkouts/gecko/dom/media/eme/MediaKeySystemAccessManager.cpp:168:7'>::DoResolveOrRejectInternal /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:921
[task 2024-04-05T21:29:54.778Z] 21:29:54     INFO - GECKO(7176) |     #7 0x7ffddf2f8cbb in mozilla::MozPromise<bool,nsresult,1>::ThenValueBase::ResolveOrRejectRunnable::Run /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:487
[task 2024-04-05T21:29:54.779Z] 21:29:54     INFO - GECKO(7176) |     #8 0x7ffddff4b2ae in mozilla::RunnableTask::Run /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:578
[task 2024-04-05T21:29:54.779Z] 21:29:54     INFO - GECKO(7176) |     #9 0x7ffddff27e4f in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:905
[task 2024-04-05T21:29:54.781Z] 21:29:54     INFO - GECKO(7176) |     #10 0x7ffddff23e4b in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:728
[task 2024-04-05T21:29:54.782Z] 21:29:54     INFO - GECKO(7176) |     #11 0x7ffddff24824 in mozilla::TaskController::ProcessPendingMTTask /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:514
[task 2024-04-05T21:29:54.783Z] 21:29:54     INFO - GECKO(7176) |     #12 0x7ffddff4efb1 in mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:232:7'>::Run /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.h:548
[task 2024-04-05T21:29:54.783Z] 21:29:54     INFO - GECKO(7176) |     #13 0x7ffddff7e2fb in nsThread::ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1199
[task 2024-04-05T21:29:54.784Z] 21:29:54     INFO - GECKO(7176) |     #14 0x7ffddff8fe3a in NS_ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:480
[task 2024-04-05T21:29:54.785Z] 21:29:54     INFO - GECKO(7176) |     #15 0x7ffde16d8557 in mozilla::ipc::MessagePump::Run /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:85
[task 2024-04-05T21:29:54.786Z] 21:29:54     INFO - GECKO(7176) |     #16 0x7ffde15e9cb3 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:363
[task 2024-04-05T21:29:54.787Z] 21:29:54     INFO - GECKO(7176) |     #17 0x7ffde15e9a7a in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:345
[task 2024-04-05T21:29:54.788Z] 21:29:54     INFO - GECKO(7176) |     #18 0x7ffde9ff401c in nsBaseAppShell::Run /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:148
[task 2024-04-05T21:29:54.788Z] 21:29:54     INFO - GECKO(7176) |     #19 0x7ffdea277e47 in nsAppShell::Run /builds/worker/checkouts/gecko/widget/windows/nsAppShell.cpp:822
[task 2024-04-05T21:29:54.789Z] 21:29:54     INFO - GECKO(7176) |     #20 0x7ffdee4ec27e in XRE_RunAppShell /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:712
[task 2024-04-05T21:29:54.790Z] 21:29:54     INFO - GECKO(7176) |     #21 0x7ffde15e9cb3 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:363
[task 2024-04-05T21:29:54.790Z] 21:29:54     INFO - GECKO(7176) |     #22 0x7ffde15e9a7a in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:345
[task 2024-04-05T21:29:54.791Z] 21:29:54     INFO - GECKO(7176) |     #23 0x7ffdee4eb830 in XRE_InitChildProcess /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:647
[task 2024-04-05T21:29:54.792Z] 21:29:54     INFO - GECKO(7176) |     #24 0x7ff7fc3e2893 in NS_internal_main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:375
[task 2024-04-05T21:29:54.793Z] 21:29:54     INFO - GECKO(7176) |     #25 0x7ff7fc3e161a in wmain /builds/worker/checkouts/gecko/toolkit/xre/nsWindowsWMain.cpp:174
[task 2024-04-05T21:29:54.793Z] 21:29:54     INFO - GECKO(7176) |     #26 0x7ff7fc4cfa27 in __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
[task 2024-04-05T21:29:54.794Z] 21:29:54     INFO - GECKO(7176) |     #27 0x7ffe35ee257c in BaseThreadInitThunk+0x1c (C:\Windows\System32\KERNEL32.DLL+0x18001257c)
[task 2024-04-05T21:29:54.795Z] 21:29:54     INFO - GECKO(7176) |     #28 0x7ffe3676aa57 in RtlUserThreadStart+0x27 (C:\Windows\SYSTEM32\ntdll.dll+0x18005aa57)
[task 2024-04-05T21:29:54.795Z] 21:29:54     INFO - GECKO(7176) | Address 0x00daa67fc6b8 is located in stack of thread T0 at offset 184 in frame
[task 2024-04-05T21:29:54.796Z] 21:29:54     INFO - GECKO(7176) |     #0 0x7ffde7345b1f in mozilla::dom::GetSupportedKeySystemConfigs /builds/worker/checkouts/gecko/dom/media/eme/MediaKeySystemAccess.cpp:235
[task 2024-04-05T21:29:54.796Z] 21:29:54     INFO - GECKO(7176) |   This frame has 14 object(s):
INFO - GECKO(7176) |     [32, 33) 'agg.tmp.i.i151'
[task 2024-04-05T21:29:54.797Z] 21:29:54     INFO - GECKO(7176) |     [48, 49) 'agg.tmp.i.i136'
[task 2024-04-05T21:29:54.798Z] 21:29:54     INFO - GECKO(7176) |     [64, 65) 'agg.tmp.i.i115'
[task 2024-04-05T21:29:54.798Z] 21:29:54     INFO - GECKO(7176) |     [80, 81) 'agg.tmp.i.i100'
[task 2024-04-05T21:29:54.799Z] 21:29:54     INFO - GECKO(7176) |     [96, 97) 'agg.tmp.i.i86'
[task 2024-04-05T21:29:54.800Z] 21:29:54     INFO - GECKO(7176) |     [112, 113) 'agg.tmp.i.i72'
[task 2024-04-05T21:29:54.800Z] 21:29:54     INFO - GECKO(7176) |     [128, 129) 'agg.tmp.i.i'
[task 2024-04-05T21:29:54.800Z] 21:29:54     INFO - GECKO(7176) |     [144, 152) 'requests' (line 237)
[task 2024-04-05T21:29:54.801Z] 21:29:54     INFO - GECKO(7176) |     [176, 328) 'ref.tmp11' (line 249) <== Memory access at offset 184 is inside this variable
[task 2024-04-05T21:29:54.801Z] 21:29:54     INFO - GECKO(7176) |     [400, 552) 'ref.tmp17' (line 253)
[task 2024-04-05T21:29:54.802Z] 21:29:54     INFO - GECKO(7176) |     [624, 776) 'ref.tmp22' (line 256)
[task 2024-04-05T21:29:54.802Z] 21:29:54     INFO - GECKO(7176) |     [848, 1000) 'ref.tmp31' (line 263)
[task 2024-04-05T21:29:54.803Z] 21:29:54     INFO - GECKO(7176) |     [1072, 1224) 'ref.tmp45' (line 273)
[task 2024-04-05T21:29:54.803Z] 21:29:54     INFO - GECKO(7176) |     [1296, 1448) 'ref.tmp53' (line 279)
[task 2024-04-05T21:29:54.804Z] 21:29:54     INFO - GECKO(7176) | HINT: this may be a false positive if your program uses some custom stack unwind mechanism, swapcontext or vfork
[task 2024-04-05T21:29:54.804Z] 21:29:54     INFO - GECKO(7176) |       (longjmp, SEH and C++ exceptions *are* supported)
[task 2024-04-05T21:29:54.805Z] 21:29:54     INFO - GECKO(7176) | SUMMARY: AddressSanitizer: stack-use-after-scope /builds/worker/checkouts/gecko/xpcom/string/nsTStringRepr.cpp:83 in mozilla::detail::nsTStringRepr<char16_t>::EqualsASCII
[task 2024-04-05T21:29:54.806Z] 21:29:54     INFO - GECKO(7176) | Shadow bytes around the buggy address:
[task 2024-04-05T21:29:54.806Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc400: f8 f2 f2 f2 f8 f2 00 f2 f2 f2 00 f2 f2 f2 f8 f2
[task 2024-04-05T21:29:54.807Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc480: f2 f2 f8 f8 f3 f3 f3 f3 00 00 00 00 00 00 00 00
[task 2024-04-05T21:29:54.807Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc500: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
[task 2024-04-05T21:29:54.808Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc580: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
[task 2024-04-05T21:29:54.808Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc600: f1 f1 f1 f1 f8 f2 f8 f2 f8 f2 f8 f2 f8 f2 f8 f2
[task 2024-04-05T21:29:54.809Z] 21:29:54     INFO - GECKO(7176) | =>0x00daa67fc680: f8 f2 00 f2 f2 f2 f8[f8]f8 f8 f8 f8 f8 f8 f8 f8
[task 2024-04-05T21:29:54.809Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc700: f8 f8 f8 f8 f8 f8 f8 f8 f8 f2 f2 f2 f2 f2 f2 f2
[task 2024-04-05T21:29:54.810Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc780: f2 f2 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8
[task 2024-04-05T21:29:54.811Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc800: f8 f8 f8 f8 f8 f2 f2 f2 f2 f2 f2 f2 f2 f2 f8 f8
[task 2024-04-05T21:29:54.811Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc880: f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8 f8
[task 2024-04-05T21:29:54.812Z] 21:29:54     INFO - GECKO(7176) |   0x00daa67fc900: f8 f2 f2 f2 f2 f2 f2 f2 f2 f2 f8 f8 f8 f8 f8 f8
[task 2024-04-05T21:29:54.812Z] 21:29:54     INFO - GECKO(7176) | Shadow byte legend (one shadow byte represents 8 application bytes):
[task 2024-04-05T21:29:54.812Z] 21:29:54     INFO - GECKO(7176) |   Addressable:           00
[task 2024-04-05T21:29:54.813Z] 21:29:54     INFO - GECKO(7176) |   Partially addressable: 01 02 03 04 05 06 07
<...>
Flags: needinfo?(alwu)
Summary: Perma [Tier 2] SUMMARY: AddressSanitizer: stack-use-after-scope /builds/worker/checkouts/gecko/xpcom/string/nsTStringRepr.cpp:83 in mozilla::detail::nsTStringRepr<char16_t>::EqualsASCII | single tracking bug → Perma wmfme [tier 2] SUMMARY: AddressSanitizer: stack-use-after-scope /builds/worker/checkouts/gecko/xpcom/string/nsTStringRepr.cpp:83 in mozilla::detail::nsTStringRepr<char16_t>::EqualsASCII | single tracking bug

Set release status flags based on info from the regressing bug 1888238

Assignee: nobody → alwu
Flags: needinfo?(alwu)
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9b37d34ee93d store an instance of string. r=media-playback-reviewers,padenot
Status: NEW → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
Duplicate of this bug: 1892229
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: