Bug 1890070 - store an instance of string. r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D206948